revert to older commit

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ TARGET_RX_ADDR="127.0.0.1:34001"
 LOCAL_RX_ADDR="127.0.0.1:32001"
 
 # Discord Bot configuration
-BOT_TOKEN=INSERT_YOUR_TOKEN_HERE
+BOT_TOKEN=MTEyNzE0NDQxMzg3MzgzMTk4OQ.GiumFd.IOE51UApjrrjue6uXnUsmkEtV8XarVi0exR-2M
 BOT_PREFIX="!"
