--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "dmr-bridge-discord"
 version = "0.2.0"
-authors = ["Alexandre MONIER <alexandre.monierc@gmail.com>", "Jessy SOBREIRO <jessy.sobreiro@gmail.com>"]
-keywords = ["dmr", "analog-bridge", "usrp", "discord"]
-edition = "2021"
+authors = ["Alexandre MONIER <alexandre.monierc@gmail.com>", "Jessy SOBREIRO <jessy.sobreiro@gmail.com>", "Caleb KO4UYJ <ko4uyj@gmail.com>"]
+keywords = ["dvm", "dvmbridge", "pcm-udp", "discord"]
+edition = "2023"
 license = "GPL-3.0-only"
 readme = "README.md"
-description = "Bridge a DMR network with a Discord voice channel"
-repository = "https://github.com/jess-sys/dmr-bridge-discord.git"
-homepage = "https://github.com/jess-sys/dmr-bridge-discord"
-documentation = "https://github.com/jess-sys/dmr-bridge-discord/README.md"
+description = "Bridge a DVM network with a Discord voice channel"
+repository = "https://github.com/firealarmss/dmr-bridge-discord.git"
+homepage = "https://github.com/firealarmss/dmr-bridge-discord"
+documentation = "https://github.com/firealarmss/dmr-bridge-discord/README.md"
 categories = ["command-line-utilities", "multimedia::audio", "network-programming"]
 
 [dependencies]
@@ -22,3 +22,4 @@ tokio = { version = "1.28.0", features = ["full"] }
 chrono = "0.4.24"
 dotenv = "0.15.0"
 byteorder = "1.4.3"
+reqwest = "0.11"
